--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			</div>
 			<!-- SECOND SLOT -->
 			<div class="col center-content">
-				<img src="images/lemon_slot.PNG" class="restrict-img-size" id="slot2"  onclick="midImage(this)" /> 
+				<img src="images/lemon_slot.PNG" class="restrict-img-size" id="slot2"  onclick="nextImage2(this)" /> 
 			</div>
 			<!-- THIRD SLOT -->
 			<div class="col center-content">
-				<img src="images/orange_slot.PNG" class="restrict-img-size" id="slot3" onclick="lastImage(this)" />
+				<img src="images/orange_slot.PNG" class="restrict-img-size" id="slot3" onclick="nextImage3(this)" />
 			</div>
 		</div>
 		
