--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<!-- BOTTOM ROW -->
 		<div class="row center-content">
-			<img src="images/jackpot.png" class="button restrict-img-size" onclick="playSound()"/>
+			<img src="images/jackpot.png" class="button restrict-img-size" onclick="checkSlot()"/>
 		</div>
 		
 		<audio src="sounds/winner.mp3" type="audio/mp3" id="you-win"></audio>
